Update code and documentation for workout tracker API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Nothing+You+Could+Do&family=Poiret+One&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         body {
@@ -54,11 +58,19 @@
             text-align: center;
         }
         .hero-content h1 {
-            font-size: 48px;
+            font-family: Nothing You Could Do, cursive;
+            font-weight: 500;
+            font-style: normal;
+            font-size: 60px;
+            color: white;
             margin: 0;
         }
         .hero-content p {
-            font-size: 18px;
+            font-family: Nothing You Could Do, cursive;
+            font-weight: 500;
+            font-style: normal;
+            font-size: 30px;
+            color: white;
         }
         .info {
             text-align: center;
@@ -81,9 +93,8 @@
     <nav class="navbar">
         <div class="logo">Workout Tracker</div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="auth-buttons">
             <a href="login.html" class="btn">Login</a>
