--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Workout Tracker</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" crossorigin="anonymous"></script>
+
     <style>
         body {
             margin: 0;
@@ -45,6 +46,9 @@
         }
         .back-home:hover {
             background-color: #ff4500;
+        }
+        .welcome-text{
+            color: aliceblue;
         }
         .container {
             text-align: center;
